fix(navbar): create element shadow
Create a element with same dimensions of navbar component to occupy space on screen and don't overlap with page content

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,3 +1,7 @@
+:host {
+  width: 100%;
+}
+
 .nav {
   bottom: 0;
   left: 0;
@@ -52,4 +56,26 @@ a {
   color: currentColor;
   cursor: pointer;
   text-decoration: none;
+}
+
+.shadow {
+  width: 100%;
+}
+
+.shadow.simple {
+  height: 63px;
+}
+
+.shadow.expanded {
+  height: 127px;
+}
+
+@media (max-width: 600px) {
+  .shadow.simple {
+    height: 56px;
+  }
+
+  .shadow.expanded {
+    height: 112px;
+  }
 }
